# Crank

./: .gitignore  .standardese-config  CONTRIBUTING.md  README.md  bpt.yaml  crank.wrap  meson.build
example/: meson.build
example/include/basic/: basic.hxx
example/src/: main.cxx
example/src/basic/: basic.cxx  meson.build
include/: base_state.hpp  crank.hxx  engine.hpp  engine.hxx  global_variables.hpp  meson.build  state_interface.hxx
include/crank/: crank.hxx  meson.build
include/data/: data.hxx
include/engine/: engine.hxx  meson.build
include/states/: base.hxx  id.hxx  meson.build  state_interface.hxx
libs/engine/include/: base.hpp  basic.hpp  engine.hpp
libs/engine/src/: basic.cpp  crank.hpp  engine.cpp  game.test.cpp
libs/states/src/: base.hpp  basic.cpp  basic.hpp
src/: basic.cpp  basic.hpp  crank.hpp  engine.cpp  game.test.cpp  globals.hpp
src/crank/: crank.hpp
src/data/: data.hpp
src/engine/: engine.cpp  engine.cxx  engine.hpp  engine.hxx  meson.build
src/example/: basic.cpp  basic.cxx  basic.hpp  basic.hxx  game.main.cxx  game.test.cpp  game.test.cxx  globals.hpp  globals.hxx
src/states/: base.hpp  base.hxx
src/tests/: game.test.cpp
templates/: header.hxx
